Fix ActivityTranslation Id