@@ -35,7 +35,7 @@ class ActivityServiceTest {
 
   @InjectMocks private ActivityService service;
 
-  @Captor ArgumentCaptor<List<Activity>> activitiesCaptor;
+  @Captor private ArgumentCaptor<List<Activity>> activitiesCaptor;
   private BookingProvider viatorProvider;
   private Set<String> validActivityIds;
   private CommonPersistableActivity persistableActivity;
@@ -87,7 +87,9 @@ class ActivityServiceTest {
 
   @Test
   void findExistingIdsByProviderNameAndIds_shouldThrowWhenActivityIdsIsEmpty() {
-    assertThatThrownBy(() -> service.findExistingIdsByProviderNameAndIds(BookingProviderName.VIATOR, Set.of()))
+    Set<String> emptySet = Set.of();
+
+    assertThatThrownBy(() -> service.findExistingIdsByProviderNameAndIds(BookingProviderName.VIATOR, emptySet))
         .isInstanceOf(IllegalArgumentException.class);
   }
 
@@ -116,7 +118,8 @@ class ActivityServiceTest {
 
   @Test
   void findActivitiesByProviderNameAndIds_shouldThrowWhenActivityIdsIsEmpty() {
-    assertThatThrownBy(() -> service.findActivitiesByProviderNameAndIds(BookingProviderName.VIATOR, Set.of()))
+    Set<String> emptySet = Set.of();
+    assertThatThrownBy(() -> service.findActivitiesByProviderNameAndIds(BookingProviderName.VIATOR, emptySet))
         .isInstanceOf(IllegalArgumentException.class);
   }
 
@@ -138,7 +141,9 @@ class ActivityServiceTest {
 
   @Test
   void saveAll_shouldThrowWhenActivitiesIsEmpty() {
-    assertThatThrownBy(() -> service.saveAll(List.of())).isInstanceOf(IllegalArgumentException.class);
+    List<Activity> emptyList = List.of();
+
+    assertThatThrownBy(() -> service.saveAll(emptyList)).isInstanceOf(IllegalArgumentException.class);
   }
 
   @Test
@@ -148,6 +153,7 @@ class ActivityServiceTest {
         Map.of(BookingProviderName.VIATOR, Set.of("activity1", "activity2"));
 
     when(bookingProviderService.getAllBookingProviders()).thenReturn(List.of(viatorProvider));
+    when(languageService.getAllLanguages()).thenReturn(List.of(getEnglishLanguage()));
     when(mockStrategy.getProviderName()).thenReturn(BookingProviderName.VIATOR);
     when(mockStrategy.fetchProviderActivities(any())).thenReturn(List.of(persistableActivity));
     when(activityRepository.findExistingIdsByProviderNameAndIds(any(), any())).thenReturn(Set.of("activity2"));
@@ -159,20 +165,16 @@ class ActivityServiceTest {
     service.cacheNewActivitiesByProvider(providerToIds);
 
     // Verify repository was called with transformed activities
-    activitiesCaptor = ArgumentCaptor.forClass(List.class);
     verify(activityRepository).saveAll(activitiesCaptor.capture());
 
     List<Activity> savedActivities = activitiesCaptor.getValue();
     assertThat(savedActivities).hasSize(1);
-    assertThat(savedActivities.get(0).getProviderActivityId()).isEqualTo("activity1");
+    assertThat(savedActivities.getFirst().getProviderActivityId()).isEqualTo("activity1");
   }
 
   @Test
   void toActivity_shouldAddTranslationsSuccessfully() {
     // Setup
-    when(languageService.getAllLanguages())
-        .thenReturn(List.of(new Language(1L, LanguageCode.EN), new Language(2L, LanguageCode.FR)));
-
     CommonPersistableActivity.Translation enTitle =
         new CommonPersistableActivity.Translation(LanguageCode.EN, "English Title");
     CommonPersistableActivity.Translation frTitle =
@@ -195,6 +197,7 @@ class ActivityServiceTest {
 
     Map<BookingProviderName, Set<String>> providerToIds = Map.of(BookingProviderName.VIATOR, Set.of("activity1"));
     when(bookingProviderService.getAllBookingProviders()).thenReturn(List.of(viatorProvider));
+    when(languageService.getAllLanguages()).thenReturn(List.of(getEnglishLanguage(), getFrenchLanguage()));
     when(mockStrategy.getProviderName()).thenReturn(BookingProviderName.VIATOR);
     when(mockStrategy.fetchProviderActivities(any())).thenReturn(List.of(activity));
 
@@ -203,27 +206,31 @@ class ActivityServiceTest {
     service.cacheNewActivitiesByProvider(providerToIds);
 
     // Verify
-    activitiesCaptor = ArgumentCaptor.forClass(List.class);
     verify(activityRepository).saveAll(activitiesCaptor.capture());
 
-    Activity savedActivity = activitiesCaptor.getValue().get(0);
+    Activity savedActivity = activitiesCaptor.getValue().getFirst();
     assertThat(savedActivity.getActivityTranslations()).hasSize(2);
   }
 
   @Test
   void toActivity_shouldSkipTranslationsForMissingLanguages() {
     // Setup - only provide English language, but include titles for EN and FR
-    when(languageService.getAllLanguages()).thenReturn(List.of(new Language(1L, LanguageCode.EN)));
+    when(languageService.getAllLanguages()).thenReturn(List.of(getEnglishLanguage()));
 
     CommonPersistableActivity.Translation enTitle =
         new CommonPersistableActivity.Translation(LanguageCode.EN, "English Title");
     CommonPersistableActivity.Translation frTitle =
         new CommonPersistableActivity.Translation(LanguageCode.FR, "French Title");
 
+    CommonPersistableActivity.Translation enDescription =
+        new CommonPersistableActivity.Translation(LanguageCode.EN, "English Description");
+    CommonPersistableActivity.Translation frenchDescription =
+        new CommonPersistableActivity.Translation(LanguageCode.FR, "French Description");
+
     CommonPersistableActivity activity =
         new CommonPersistableActivity(
             List.of(enTitle, frTitle),
-            List.of(),
+            List.of(enDescription, frenchDescription),
             List.of(),
             new CommonPersistableActivity.Review(4.5f, 100),
             60,
@@ -242,10 +249,9 @@ class ActivityServiceTest {
     service.cacheNewActivitiesByProvider(providerToIds);
 
     // Verify only English translation was added
-    activitiesCaptor = ArgumentCaptor.forClass(List.class);
     verify(activityRepository).saveAll(activitiesCaptor.capture());
 
-    Activity savedActivity = activitiesCaptor.getValue().get(0);
+    Activity savedActivity = activitiesCaptor.getValue().getFirst();
     assertThat(savedActivity.getActivityTranslations()).hasSize(1);
     assertThat(savedActivity.getActivityTranslations().iterator().next().getLanguage().getCode())
         .isEqualTo(LanguageCode.EN);
@@ -258,7 +264,9 @@ class ActivityServiceTest {
 
   @Test
   void cacheNewActivitiesByProvider_shouldThrowWhenProviderNameToIdIsEmpty() {
-    assertThatThrownBy(() -> service.cacheNewActivitiesByProvider(Map.of()))
+    Map<BookingProviderName, Set<String>> emptyMap = Map.of();
+
+    assertThatThrownBy(() -> service.cacheNewActivitiesByProvider(emptyMap))
         .isInstanceOf(ActivityCachingException.class);
   }
 
@@ -269,6 +277,8 @@ class ActivityServiceTest {
         Map.of(BookingProviderName.VIATOR, Set.of("activity1", "activity2"));
 
     when(bookingProviderService.getAllBookingProviders()).thenReturn(List.of(viatorProvider));
+    when(languageService.getAllLanguages()).thenReturn(List.of(getEnglishLanguage()));
+
     // All IDs already exist in DB
     when(activityRepository.findExistingIdsByProviderNameAndIds(any(), any()))
         .thenReturn(Set.of("activity1", "activity2"));
@@ -312,10 +322,8 @@ class ActivityServiceTest {
     service = new ActivityService(activityRepository, bookingProviderService, languageService, List.of(mockStrategy));
 
     // Execute
-    service.cacheNewActivitiesByProvider(providerToIds);
-
-    // Verify no activities were saved
-    verify(activityRepository, never()).saveAll(any());
+    assertThatThrownBy(() -> service.cacheNewActivitiesByProvider(providerToIds))
+        .isInstanceOf(ActivityCachingException.class);
   }
 
   @Test
@@ -324,6 +332,7 @@ class ActivityServiceTest {
     Map<BookingProviderName, Set<String>> providerToIds = Map.of(BookingProviderName.VIATOR, Set.of("activity1"));
 
     when(bookingProviderService.getAllBookingProviders()).thenReturn(List.of(viatorProvider));
+    when(languageService.getAllLanguages()).thenReturn(List.of(getEnglishLanguage()));
     when(activityRepository.findExistingIdsByProviderNameAndIds(any(), any())).thenReturn(Set.of());
     when(mockStrategy.getProviderName()).thenReturn(BookingProviderName.VIATOR);
     when(mockStrategy.fetchProviderActivities(any())).thenThrow(new RuntimeException("Test exception"));
@@ -354,5 +363,13 @@ class ActivityServiceTest {
     assertThatThrownBy(() -> service.cacheNewActivitiesByProvider(providerToIds))
         .isInstanceOf(RuntimeException.class)
         .hasMessageContaining("Database error");
+  }
+
+  private Language getEnglishLanguage() {
+    return new Language(1L, LanguageCode.EN);
+  }
+
+  private Language getFrenchLanguage() {
+    return new Language(2L, LanguageCode.FR);
   }
 }
